# fsgamurte

./: .gitignore  README.md  pipeline_fast.py  process_arxiv.py  process_concatenation.py  process_createbases.py  process_doc2vec.py  process_fasttext.py  process_liwc.py  process_mrc2.py  process_ngram.py  process_sbert.py  process_stagger.py  process_word2vec.py  pyproject.toml  run_fsga_murte.py  run_statistics.py  wilcoxon_analysis.py
shared/dictionaries/liwc/: LIWC2015.dic
src/gafsmre/representations/: __init__.py  doc2vec.py  fasttext.py  liwc.py  mrc2.py  ngram.py  representation.py  sbert.py  stagger.py  word2vec.py
src/gafsmre/utils/text/: processing.py
