[tool.poetry]
name = "GaFsMre"
version = "0.1.1"
description = ""
authors = ["João Gaspar"]
readme = "README.md"

packages = [
    { include = "gafsmre", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

pandas = ">=1.5.3,<2"
scikit-learn = ">=1.2.1,<2"
gensim = ">=4.3.0,<5"
numpy = ">1.2.4,<2"
numba = ">=0.60.0,<0.61"
stanza = "1.5.1"
spacy = ">=3.8,<3.9"
networkx = "~3.0"
openpyxl = ">=3.1.1,<4"
yellowbrick = "~1.5"
sentence-transformers = ">=2.2.2,<3"
emoji = ">=2.6.0,<3"
fasttext-wheel = ">=0.9.2,<0.10"
spacy-stanza = "1.0.4"
pyarrow = ">=22.0.0"
ipykernel = ">=6.26.0"
geneticalgorithm = ">=1.0.2"
cupy-cuda12x = ">=13.0.0"

# PyTorch será adicionado via source CUDA
torch = { version = "2.2.0", source = "pytorch-cu121" }

# Modelo spaCy via URL
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
streamlit = "^1.53.1"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0,<2"
autopep8 = ">=2.0.1,<3"
dill = ">=0.3.6,<0.4"
ipympl = ">=0.9.3,<0.10"
ruff = "0.1.3"
pylint = ">=2.17.3,<3"
matplotlib = ">=3.7.0,<4"
jupyterlab = ">=3"
jupyterlab-dash = ">=0.1.0a3,<0.2"
ipywidgets = ">=7.6"
jupyterlab-execute-time = "^3.2.0"
nbclassic = ">=1.0.0,<2"
plotly = ">=5.14.1,<6"
seaborn = ">=0.12.2,<0.13"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
